tests/specs/check/cjs_default_export/main.ts
import cjsDefault from "npm:@denotest/cjs-default-export";

// should error since cjsDefault.default() is a number
export const Test: string = cjsDefault.default();
